--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   get: ^4.6.5
   dio: ^5.1.1
   shimmer: ^2.0.0
+  path_provider_android: ^2.0.24
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  json_annotation: ^4.8.0
+  build_runner: ^1.7.0
+  image_picker: ^0.8.7+1
 
 dev_dependencies:
   flutter_test:
